Sign-in, Login and Logout buttons visibility fixed, jwt stored to app db

--- a/webstore-demo/re-frame-demo/src/sass/main.scss
+++ b/webstore-demo/re-frame-demo/src/sass/main.scss
@@ -46,7 +46,7 @@ body {
   margin-top: 25px;
 }
 
-.sf-header-signin-button {
+.sf-header-button {
   margin-right: 5px;
 }
 
